--- a/buildhealth.build/build.xml
+++ b/buildhealth.build/build.xml
@@ -106,6 +106,7 @@
 			-dontwarn
 				
 			-keep class org.pescuma.buildhealth.cli.BuildHealthCli {*;}
+			-keep class org.pescuma.buildhealth.cli.BuildHealthCliBench {*;}
 			-keep class org.pescuma.buildhealth.ant.** {*;}
 
 			-keep class org.pescuma.buildhealth.core.BuildHealth {*;}
@@ -155,6 +156,7 @@
 			-dontwarn
 				
 			-keep class org.pescuma.buildhealth.cli.BuildHealthCli {*;}
+			-keep class org.pescuma.buildhealth.cli.BuildHealthCliBench {*;}
 			-keep class org.pescuma.buildhealth.ant.** {*;}
 
 			-keep class org.pescuma.buildhealth.core.BuildHealth {*;}
